--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,10 @@
 		<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-devtools</artifactId>
-    <version>3.0.5</version>
+    <optional>true</optional>
+    <scope>runtime</scope>
 </dependency>
+
 
 		
 		</dependencies>
